Added images for carousel

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,20 +2,20 @@
 		<div id="home-slider" class="carousel slide carousel-fade" data-ride="carousel">
 			<!-- .home-slider -->
 			<div class="carousel-inner">
-				<div class="item active" style="background-image: url(assets/images/header-1.jpg);  background-repeat: no-repeat; background-position: top;">
+				<div class="item active" style="background-image: url(assets/img/carousel-1.jpg);  background-repeat: no-repeat; background-position: top;">
 					<div class="caption">
-						<h2 class="animated wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s">Handmade<br> Hand Carved Coffee</h2>
-						<p class="animated wow fadeIn" data-wow-duration=".2s" data-wow-delay=".1s">As rich and unique as the coffee beans it is intended for, this little scoop will make your morning ritual a special occasion every day. </p> <a data-scroll class="btn get-start animated fadeInUpBig" href="#"><span>view collection</span></a> </div>
+						<h2 class="animated wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s">Succulents & Cacti</h2>
+						<p class="animated wow fadeIn" data-wow-duration=".2s" data-wow-delay=".1s">The Plants Of Patience And Solitude, Love And Madness, Ugliness And Beauty, Toughness And Gentleness. </p> <a data-scroll class="btn get-start animated fadeInUpBig" href="products"><span>view collection</span></a> </div>
 				</div>
-				<div class="item" style="background-image: url(assets/images/header-2.jpg);  background-repeat: no-repeat; background-position: top;">
+				<div class="item" style="background-image: url(assets/img/carousel-2.jpg);  background-repeat: no-repeat; background-position: top;">
 					<div class="caption">
-						<h2 class="animated wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s">Handmade<br> Hand Carved Coffee</h2>
-						<p class="animated wow fadeIn" data-wow-duration=".2s" data-wow-delay=".1s">As rich and unique as the coffee beans it is intended for, this little scoop will make your morning ritual a special occasion every day. </p> <a data-scroll class="btn get-start animated fadeInUpBig" href="#"><span>view collection</span></a> </div>
+						<h2 class="animated wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s">Home Decor</h2>
+						<p class="animated wow fadeIn" data-wow-duration=".2s" data-wow-delay=".1s">Your Home Speaks Volumes About You. Lets Go An Extra Mile To Express Yourself Subtly Yet With Class. </p> <a data-scroll class="btn get-start animated fadeInUpBig" href="#"><span>view collection</span></a> </div>
 				</div>
-				<div class="item" style="background-image: url(assets/images/header-3.jpg);  background-repeat: no-repeat; background-position: top;">
+				<div class="item" style="background-image: url(assets/img/carousel-3.jpg);  background-repeat: no-repeat; background-position: top;">
 					<div class="caption">
-						<h2 class="animated wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s">Handmade<br> Hand Carved Coffee</h2>
-						<p class="animated wow fadeIn" data-wow-duration=".2s" data-wow-delay=".1s">As rich and unique as the coffee beans it is intended for, this little scoop will make your morning ritual a special occasion every day. </p> <a data-scroll class="btn get-start animated fadeInUpBig" href="#"><span>view collection</span></a> </div>
+						<h2 class="animated wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s">Garden Planning</h2>
+						<p class="animated wow fadeIn" data-wow-duration=".2s" data-wow-delay=".1s">Gardening Is The Purest Of Human Pleasures, It Is The Slowest Of The Performing Arts. </p> <a data-scroll class="btn get-start animated fadeInUpBig" href="#"><span>view collection</span></a> </div>
 				</div>
 				<!-- indicators -->
 				<ol class="carousel-indicators">
