Landing page changes
Several changes to the landing page. Added proper sections, removed animations, added custom css. Added blogs to the header

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -7,9 +7,9 @@
           <img src="assets/images/thetstory-logo-white.png" alt="logo" height="60">
           <p>Let's make gifting simple.</p>
           <ul>
-            <li><i class="icon-location-pin icons" aria-hidden="true"></i> Amchi Mumbai</li>
-            <li><i class="icon-envelope-letter icons"></i> hello@thetstory.co</li>
-            <li><i class="icon-call-in icons"></i> 797-777-6587 / 996-702-2329</li>
+            <li><i class="icon-location-pin icons"> </i> Amchi Mumbai</li>
+            <li><i class="icon-envelope-letter icons"> </i> hello@thetstory.co</li>
+            <li><i class="icon-call-in icons"> </i> 797-777-6587 / 996-702-2329</li>
           </ul>
         </div>
         <!-- /f-weghit -->
