--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -827,7 +827,7 @@ select {
 	color: #bd8348;
 }
 blockquote {
-	background: rgba(0, 0, 0, 0) url("img/qoute-icon.png") no-repeat scroll 8px 12px;
+	/* background: rgba(0, 0, 0, 0) url("img/qoute-icon.png") no-repeat scroll 8px 12px; */
 	font-size: 16px;
 	font-style: italic;
 	margin: 20px 0 40px;
@@ -1888,6 +1888,12 @@ header {
 .inline-page-title::after {
 	width: calc((100% - 251px) / 2 - 20px) !important;
 }
+
+/*  Services  */
+.services-section{
+	padding: 0px 0 50px;
+}
+
 .services-page .inline-page-title::before,
 .inline-page-title::after {
 	width: calc((100% - 169px) / 2 - 20px) !important;
@@ -1965,8 +1971,7 @@ header {
 .banner-bg {
 	background: rgb(255, 255, 255) none repeat scroll 0 0;
 	float: left;
-	margin-top: -100px;
-	padding: 30px 30px 0;
+	padding: 0px 30px 0;
 	position: relative;
 	width: 100%;
 }
@@ -3138,6 +3143,12 @@ select {
 .news-text span {
 	color: #bd8348;
 }
+
+/*  RSK  */
+.blog-post {
+	margin-top: -60px;
+}
+
 .blog .readbtn {
 	border: 2px solid rgb(235, 235, 235);
 	color: rgb(31, 31, 31);
@@ -5821,4 +5832,80 @@ footer {
 	.btn.next {
 		margin-right: 0;
 	}
+}
+/*  RSK*/
+.testimonals-title{
+	padding-bottom: 20px;
+}
+.testimonals-p{
+	text-align: center;
+}
+
+/*  RSK*/
+
+/* Carousel */
+
+#quote-carousel {
+    padding: 0 10px 30px 10px;
+    margin-top: 30px;
+    /* Control buttons  */
+    /* Previous button  */
+    /* Next button  */
+    /* Changes the position of the indicators */
+    /* Changes the color of the indicators */
+}
+#quote-carousel .carousel-control {
+    background: none;
+    color: #CACACA;
+    font-size: 2.3em;
+    text-shadow: none;
+    margin-top: 30px;
+}
+#quote-carousel .carousel-control.left {
+    left: -60px;
+}
+#quote-carousel .carousel-control.right {
+    right: -60px;
+}
+#quote-carousel .carousel-indicators {
+    right: 50%;
+    top: auto;
+    bottom: 0px;
+    margin-right: -19px;
+}
+#quote-carousel .carousel-indicators li {
+    width: 50px;
+    height: 50px;
+    margin: 5px;
+    cursor: pointer;
+    border: 4px solid #CCC;
+    border-radius: 50px;
+    opacity: 0.4;
+    overflow: hidden;
+    transition: all 0.4s;
+}
+#quote-carousel .carousel-indicators .active {
+    background: #333333;
+    width: 128px;
+    height: 128px;
+    border-radius: 100px;
+    border-color: #f33;
+    opacity: 1;
+    overflow: hidden;
+}
+.carousel-inner {
+    min-height: 300px;
+}
+.item blockquote {
+    border-left: none;
+    margin: 0;
+}
+.item blockquote p:before {
+    content: "\f10d";
+    font-family: 'Fontawesome';
+    float: left;
+    margin-right: 10px;
+}
+.quote-item{
+	height: auto!important;
 }
