--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -19,6 +19,7 @@
         <div class="f-weghit2">
           <h4>Information</h4>
           <ul>
+            <li><a href="/dev">Home</a></li>
             <li><a href="about-us">About Us</a></li>
             <li><a href="contact">Contact </a></li>
             <li><a href="privacy-policy">Privacy Policy</a></li>
