--- a/views/header.ejs
+++ b/views/header.ejs
@@ -44,17 +44,17 @@
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-					<a class="navbar-brand" href="/"><img src="assets/images/thetstory-logo-black.png" alt="logo" height="70" style="margin-top: -25px"></a>
+					<a class="navbar-brand" href="/dev"><img src="assets/images/thetstory-logo-black.png" alt="logo" height="70" style="margin-top: -25px"></a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" data-hover="dropdown" data-animations="fadeIn fadeInLeft fadeInUp fadeInRight">
 					<ul class="nav navbar-nav">
 
-							<li> <a href="/"><span>Home</span></a> </li>
+							<li> <a href="/dev"><span>Home</span></a> </li>
 							<li> <a href="products"><span>Products</span></a> </li>
 							<li> <a href="services"><span>Services</span></a> </li>
-							<li> <a href="services"><span>Blog</span></a> </li>
+							<li> <a href="blog"><span>Blog</span></a> </li>
 							<li> <a href="about-us"><span>About</span></a> </li>
 							<li> <a href="contact"><span>Contact</span></a> </li>
 
