Changes in header and footer

--- a/views/index-before-removing-animation.ejs
+++ b/views/index-before-removing-animation.ejs
@@ -4,18 +4,18 @@
 		<div class="carousel-inner">
 			<div class="item active" style="background-image: url(assets/img/carousel-1.jpg);  background-repeat: no-repeat; background-position: top;">
 				<div class="caption">
-					<h2>Succulents & Cacti</h2>
-					<p>The Plants Of Patience And Solitude, Love And Madness, Ugliness And Beauty, Toughness And Gentleness. </p> <a data-scroll class="btn get-start" href="products"><span>view collection</span></a> </div>
+					<h2 class="animated wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s">Succulents & Cacti</h2>
+					<p class="animated wow fadeIn" data-wow-duration=".2s" data-wow-delay=".1s">The Plants Of Patience And Solitude, Love And Madness, Ugliness And Beauty, Toughness And Gentleness. </p> <a data-scroll class="btn get-start animated fadeInUpBig" href="products"><span>view collection</span></a> </div>
 			</div>
 			<div class="item" style="background-image: url(assets/img/carousel-2.jpg);  background-repeat: no-repeat; background-position: top;">
 				<div class="caption">
-					<h2>Home Decor</h2>
-					<p>Your Home Speaks Volumes About You. Lets Go An Extra Mile To Express Yourself Subtly Yet With Class. </p> <a data-scroll class="btn get-start" href="#"><span>view collection</span></a> </div>
+					<h2 class="animated wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s">Home Decor</h2>
+					<p class="animated wow fadeIn" data-wow-duration=".2s" data-wow-delay=".1s">Your Home Speaks Volumes About You. Lets Go An Extra Mile To Express Yourself Subtly Yet With Class. </p> <a data-scroll class="btn get-start animated fadeInUpBig" href="#"><span>view collection</span></a> </div>
 			</div>
 			<div class="item" style="background-image: url(assets/img/carousel-3.jpg);  background-repeat: no-repeat; background-position: top;">
 				<div class="caption">
-					<h2>Garden Planning</h2>
-					<p>Gardening Is The Purest Of Human Pleasures, It Is The Slowest Of The Performing Arts. </p> <a data-scroll class="btn get-start" href="#"><span>view collection</span></a> </div>
+					<h2 class="animated wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s">Garden Planning</h2>
+					<p class="animated wow fadeIn" data-wow-duration=".2s" data-wow-delay=".1s">Gardening Is The Purest Of Human Pleasures, It Is The Slowest Of The Performing Arts. </p> <a data-scroll class="btn get-start animated fadeInUpBig" href="#"><span>view collection</span></a> </div>
 			</div>
 			<!-- indicators -->
 			<ol class="carousel-indicators">
@@ -31,7 +31,7 @@
 	<section class="blog-post">
 		<div class="container">
 			<div class="tittle text-center">
-				<h2>Blog Posts</h2>
+				<h2>Our Blog Posts</h2>
 			</div>
 		</div>
 		<div class="container">
@@ -39,30 +39,30 @@
 			<div class="banner-bg">
 				<div class="col-sm-4 col-md-4">
 					<!-- .banner-img -->
-					<div class="banner-img"> <img src="assets/images/banner1.jpg" alt="about-img1" />
+					<div class="banner-img animated wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s"> <img src="assets/images/banner1.jpg" alt="about-img1" />
 						<div class="banner-text">
 							<h3>British Made Pocket Knife - Oak</h3>
-							<p><a href="#">Read More</a></p>
+							<p><a href="#">Discover Now</a></p>
 						</div>
 					</div>
 					<!-- /.banner-outer -->
 				</div>
 				<div class="col-sm-4 col-md-4">
 					<!-- .banner-img -->
-					<div class="banner-img"> <img src="assets/images/banner2.jpg" alt="about-img1" />
+					<div class="banner-img animated wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s"> <img src="assets/images/banner2.jpg" alt="about-img1" />
 						<div class="banner-text">
 							<h3>Chair Kimi No Isu Project</h3>
-							<p><a href="#">Read More</a></p>
+							<p><a href="#">Discover Now</a></p>
 						</div>
 					</div>
 					<!-- /.banner-outer -->
 				</div>
-				<div class="col-sm-4 col-md-4">
+				<div class="col-sm-4 col-md-4 animated wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s">
 					<!-- .banner-img -->
 					<div class="banner-img"> <img src="assets/images/banner3.jpg" alt="about-img1" />
 						<div class="banner-text">
 							<h3>Merino Lambswool Scarf Moss</h3>
-							<p><a href="#">Read More</a></p>
+							<p><a href="#">Discover Now</a></p>
 						</div>
 					</div>
 					<!-- /.banner-outer -->
@@ -80,7 +80,7 @@
 			</div>
 
 
-			<div class="row">
+			<div class="row animated wow zoomIn" data-wow-duration=".5s" data-wow-delay=".2s">
 				<div class="col-md-3">
 					<!-- .pro-text -->
 					<div class="pro-text">
@@ -299,7 +299,7 @@
 				<h2>Testimonials</h2>
 			</div>
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-12" data-wow-delay="0.2s">
 					<div class="carousel slide" data-ride="carousel" id="quote-carousel">
 						<!-- Bottom Carousel Indicators -->
 						<ol class="carousel-indicators">
