--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3245,6 +3245,7 @@ select {
 .copayright {
 	border-top: 1px solid rgb(50, 50, 50);
 	padding: 30px 0 15px;
+	text-align: center;
 }
 .f-sicon2 li {
 	display: inline;
