--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-6">
+      <div class="col-xs-12 col-sm-6 col-md-offset-1 col-md-4">
         <!-- f-weghit -->
         <div class="f-weghit">
           <img src="assets/images/thetstory-logo-white.png" alt="logo" height="60">
@@ -14,20 +14,20 @@
         </div>
         <!-- /f-weghit -->
       </div>
-      <div class="col-xs-12 col-sm-3 col-md-3">
+      <div class="col-xs-12 col-sm-2 col-md-2">
         <!-- f-weghit2 -->
         <div class="f-weghit2">
-          <h4>Information</h4>
+          <h4>Site Map</h4>
           <ul>
             <li><a href="/dev">Home</a></li>
-            <li><a href="about-us">About Us</a></li>
+            <li><a href="about">About Us</a></li>
             <li><a href="contact">Contact </a></li>
-            <li><a href="privacy-policy">Privacy Policy</a></li>
+            <!-- <li><a href="privacy-policy">Privacy Policy</a></li> -->
           </ul>
         </div>
         <!-- /f-weghit2 -->
       </div>
-      <div class="col-xs-12 col-sm-3 col-md-3">
+      <!-- <div class="col-xs-12 col-sm-3 col-md-3">
         <div class="f-weghit2">
           <h4>Services</h4>
           <ul>
@@ -35,24 +35,34 @@
             <li><a href="garden-planning">Garden Planning </a></li>
           </ul>
         </div>
+      </div> -->
+      <div class="col-xs-12 col-sm-2 col-md-2">
+        <div class="f-weghit2">
+          <h4>Other</h4>
+          <ul>
+            <li><a href="privacy-policy">Privacy Policy</a></li>
+          </ul>
+        </div>
       </div>
-
+      <div class="col-xs-12 col-sm-2 col-md-2">
+        <div class="f-weghit2">
+          <h4>Social</h4>
+          <div class="f-sicon2">
+            <ul style="padding: 0!important">
+              <li style="margin-left: 0; display: inline"><a href="https://www.facebook.com/thetstoryco/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+              <li style="display: inline"><a href="https://www.instagram.com/thetstory"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <!-- copayright -->
   <div class="copayright cwhite">
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6">
-           &copy; 2017 - 2018 <a href="about-us"> The Terrarium Story Company</a>. All rights reserved.
-        </div>
-        <div class="text-right col-xs-12 col-sm-6 col-md-6">
-          <div class="f-sicon2">
-            <ul>
-              <li><a href="https://www.facebook.com/thetstoryco/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.instagram.com/thetstory"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-            </ul>
-          </div>
+        <div class="col-xs-12 col-sm-12 col-md-12">
+          &copy; 2017 - 2018 <a href="about-us"> The Terrarium Story Company</a>. All rights reserved. Developed by <a href="http://rohankalgutkar.in" style="color: #999">Rohan Kalgutkar</a>.
         </div>
       </div>
     </div>
