--- a/views/header.ejs
+++ b/views/header.ejs
@@ -55,7 +55,7 @@
 							<li> <a href="products"><span>Products</span></a> </li>
 							<li> <a href="services"><span>Services</span></a> </li>
 							<li> <a href="blog"><span>Blog</span></a> </li>
-							<li> <a href="about-us"><span>About</span></a> </li>
+							<li> <a href="about"><span>About</span></a> </li>
 							<li> <a href="contact"><span>Contact</span></a> </li>
 
 					</ul>
@@ -91,12 +91,12 @@
 				<div class="modal-content search-popup">
 					<nav class="navbar navbar-inverse openmenu">
 						<ul class="nav navbar-nav">
-							<li> <a href="#"><span>Home</span></a> </li>
-							<li> <a href="#"><span>Products</span></a> </li>
-							<li> <a href="#"><span>Services</span></a> </li>
-							<li> <a href="#"><span>Blog</span></a> </li>
-							<li> <a href="#"><span>About</span></a> </li>
-							<li> <a href="#"><span>Contact</span></a> </li>
+							<li> <a href="/dev"><span>Home</span></a> </li>
+							<li> <a href="products"><span>Products</span></a> </li>
+							<li> <a href="services"><span>Services</span></a> </li>
+							<li> <a href="blog"><span>Blog</span></a> </li>
+							<li> <a href="about"><span>About</span></a> </li>
+							<li> <a href="contact"><span>Contact</span></a> </li>
 						</ul>
 					</nav>
 				</div>
